# still-calling

./: Makefile  README.md  mypy.ini  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  generator.py  loader.py  models.py  writer.py
