[project]
name = "callmemaybe"
version = "0.1.0"
description = "LLM SDK for function choosing according to prompt"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy",
    "mypy",
    "pydantic",
    "flake8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
